# nitrokey-websmartcard-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/udp_sim/: main.rs  platform.rs  udp_server.rs  virt.rs
examples/udp_sim/platform/: store.rs
examples/usbip/: main.rs
src/lib/: commands.rs  commands_types.rs  constants.rs  ctap_app.rs  helpers.rs  hmacsha256p256.rs  lib.rs  nfc_app.rs  openpgp.rs  options.rs  peeking.rs  rk_files.rs  state.rs  transport.rs  types.rs  wcstate.rs
