[package]
name = "webcrypt"
version = "0.8.0"
authors = ["Szczepan Zalega <szczepan@nitrokey.com>"]
edition = "2021"


[lib]
name = "webcrypt"
path = "src/lib/lib.rs"


[dependencies]
delog = { version = "0.1.6", features = ["std-log"] }
cbor-smol = "0.4.0"
heapless-bytes = { version = "0.3.0", features = ["cbor"] }
heapless = "0.7"
serde = { version = "1.0", default-features = false }
serde-indexed = "0.1.0"
serde_bytes = { version = "0.11.10", default-features = false, features=["alloc"] }
generic-array = "0.14.3"
ctap-types = "0.1"
ctaphid-dispatch = "0.1"
apdu-dispatch = "0.1"

trussed = "0.1.0"
pretty_env_logger = { version = "0.4.0", optional = true }
trussed-rsa-alloc = { version = "0.1.0", optional = true }
trussed-staging = { version = "0.1.0"}

# For hmacsha256p256
hmac = { version = "0.12", default-features = false, optional = true}
sha2 = { version = "0.10", default-features = false, optional = true}

[dev-dependencies]
pretty_env_logger = "0.4.0"

# below are for running the usbip example
usbd-ctaphid = "0.1"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
clap-num = "1.0.0"
delog = { version = "0.1.6", features = ["std-log"] }
fido-authenticator = {version = "0.1.1", features = ["dispatch", "log-all"]}
trussed-hkdf = { version = "0.1.0" }
trussed-usbip = { version = "0.0.1", features = ["ctaphid"], default-features = false }
admin-app = { version = "0.1", features = ["log-all"] }

# extensions
trussed-rsa-alloc = { version = "0.1.0", features = ["virt"] }
trussed-auth = "0.2.2"


[features]
default = ["inject-any-key", "hmacsha256p256", "rsa"]
enable-logs = ["pretty_env_logger", "log-all", "delog/std-log", "trussed-rsa-alloc/log-all"]

# Disable ClientContext PIN encryption
transparent-encryption = []

# Disable authentication token check. FIXME rename to mark it as dangerous, and remove from the features
no-authentication = []

# Enable to make NFC transport work. Needs updated apdu-dispatch for Peek implementation / multiple apps support.
# Soon probably obsolete by the app wrapper approach
apdu-peek = []

# Support P256 key derivation from HMAC
# Uses custom backend extension
hmacsha256p256 = ["hmac", "sha2"]

# Allow to inject raw key data with specified type into the Trussed key store. Needed for OpenPGP support to use Kind::P256.
# Uses custom backend extension
inject-any-key = ["hmacsha256p256"]

# Support RSA
rsa = ["trussed-rsa-alloc"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[[example]]
name="usbip"


[patch.crates-io]
# Enable this for FIDO2 transport support
ctaphid-dispatch = { git = "https://github.com/Nitrokey/ctaphid-dispatch", tag = "v0.1.1-nitrokey.2" }

# Enable this for the NFC support, implemented in a somewhat outdated fork
# Probably obsoleted by apps wrapper
#apdu-dispatch = { git = "https://github.com/Nitrokey/apdu-dispatch.git", branch="sz-multiple-apps" }

# forked
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", tag = "v0.1.0-nitrokey.8" }
fido-authenticator = { git = "https://github.com/Nitrokey/fido-authenticator.git", tag = "v0.1.1-nitrokey.11" }
serde-indexed = { git = "https://github.com/sosthene-nitrokey/serde-indexed.git", rev = "5005d23cb4ee8622e62188ea0f9466146f851f0d" }

# unreleased upstream changes
apdu-dispatch = { git = "https://github.com/trussed-dev/apdu-dispatch.git", rev = "915fc237103fcecc29d0f0b73391f19abf6576de" }
ctap-types = { git = "https://github.com/trussed-dev/ctap-types.git", rev = "a9f8003a1d9f05f9eea39e615b9159bc0613fcb5" }
iso7816 = { git = "https://github.com/Nitrokey/iso7816.git", tag = "v0.1.1-nitrokey.1" }
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "ebd27e49ca321089d01d8c9b169c4aeb58ceeeca" }
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "cff2e663841b6a68d3a8ce12647d57b2b6fbc36c" }
usbd-ctaphid = { git = "https://github.com/Nitrokey/usbd-ctaphid", tag = "v0.1.0-nitrokey.1" }

# unreleased crates
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth", rev = "62235294bd63977bbb88eb01e7ac44b8010eb450" }
trussed-hkdf = { git = "https://github.com/Nitrokey/trussed-hkdf-backend.git", tag = "v0.1.0" }
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", rev = "2f51478f0861ff8db19fdd5290f023ab6f4c2fb9" }
trussed-usbip = { git = "https://github.com/Nitrokey/pc-usbip-runner", tag = "v0.0.1-nitrokey.1" }
trussed-staging = { git = "https://github.com/Nitrokey/trussed-staging.git", rev = "6e70fc4db31b92c413d56e28c6d3683a87384d46" }

# Local development
#trussed = { path = "../trussed" }
#trussed-rsa-alloc = { path = "../trussed-rsa-backend" }
#trussed-staging = { path = "../trussed-staging" }
