[package]
name = "webcrypt"
version = "0.8.0"
authors = ["Szczepan Zalega <szczepan@nitrokey.com>"]
edition = "2021"


[lib]
name = "webcrypt"
path = "src/lib/lib.rs"


[dependencies]
delog = { version = "0.1.6", features = ["std-log"] }
cbor-smol = "0.5.0"
heapless-bytes = { version = "0.3.0" }
heapless = "0.7"
littlefs2-core = "0.1"
serde = { version = "1.0", default-features = false }
serde-indexed = "0.1.0"
serde_bytes = { version = "0.11.10", default-features = false, features=["alloc"] }
generic-array = "0.14.3"
ctap-types = "0.3.1"
ctaphid-dispatch = "0.1"
apdu-app = "0.1"
iso7816 = "0.1"

trussed = "0.1.0"
pretty_env_logger = { version = "0.4.0", optional = true }
trussed-rsa-alloc = { version = "0.2.0", optional = true }

# For hmacsha256p256
hmac = { version = "0.12", default-features = false, optional = true}
sha2 = { version = "0.10", default-features = false, optional = true}

[dev-dependencies]
pretty_env_logger = "0.4.0"

# below are for running the usbip example
usbd-ctaphid = "0.1"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
clap-num = "1.0.0"
delog = { version = "0.1.6", features = ["std-log"] }
fido-authenticator = {version = "0.1.1", features = ["dispatch", "log-all"]}
trussed-hkdf = { version = "0.2.0" }
trussed-manage = { version = "0.1.0" }
trussed-fs-info = { version = "0.1.0" }
trussed-staging = { version = "0.3.0", features = ["chunked", "hkdf", "manage", "virt", "fs-info"] }
trussed-usbip = { version = "0.0.1", features = ["ctaphid"], default-features = false }
admin-app = { version = "0.1", features = ["log-all"] }

# extensions
trussed-rsa-alloc = { version = "0.2.0", features = ["virt"] }
trussed-auth = "0.3"


[features]
default = ["inject-any-key", "hmacsha256p256", "rsa"]
enable-logs = ["pretty_env_logger", "log-all", "delog/std-log", "trussed-rsa-alloc/log-all"]

# Disable ClientContext PIN encryption
transparent-encryption = []

# Disable authentication token check. FIXME rename to mark it as dangerous, and remove from the features
no-authentication = []

# Enable to make NFC transport work. Needs updated apdu-dispatch for Peek implementation / multiple apps support.
# Soon probably obsolete by the app wrapper approach
apdu-peek = []

# Support P256 key derivation from HMAC
# Uses custom backend extension
hmacsha256p256 = ["trussed/serde-extensions", "hmac", "sha2"]

# Allow to inject raw key data with specified type into the Trussed key store. Needed for OpenPGP support to use Kind::P256.
# Uses custom backend extension
inject-any-key = ["hmacsha256p256"]

# Support RSA
rsa = ["trussed-rsa-alloc"]

test-commands = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[[example]]
name="usbip"


[patch.crates-io]
# Enable this for FIDO2 transport support
ctaphid-dispatch = { git = "https://github.com/Nitrokey/ctaphid-dispatch", tag = "v0.1.1-nitrokey.2" }

# Enable this for the NFC support, implemented in a somewhat outdated fork
# Probably obsoleted by apps wrapper
#apdu-dispatch = { git = "https://github.com/Nitrokey/apdu-dispatch.git", branch="sz-multiple-apps" }

# forked
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", tag = "v0.1.0-nitrokey.18" }
fido-authenticator = { git = "https://github.com/Nitrokey/fido-authenticator.git", tag = "v0.1.1-nitrokey.23" }

# unreleased upstream changes
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "046478b7a4f6e2315acf9112d98308379c2e3eee" }
usbd-ctaphid = { git = "https://github.com/trussed-dev/usbd-ctaphid.git", rev = "dcff9009c3cd1ef9e5b09f8f307aca998fc9a8c8" }

# unreleased crates
trussed-fs-info = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "fs-info-v0.1.0" }
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth", rev = "c030b82ad3441f337af09afe3a69e8a6da5785ea" }
trussed-chunked = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "chunked-v0.1.0" }
trussed-hkdf = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "hkdf-v0.2.0" }
trussed-manage = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "manage-v0.1.0" }
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", tag = "v0.2.0" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", rev = "53eba84d2cd0bcacc3a7096d4b7a2490dcf6f069" }
trussed-usbip = { git = "https://github.com/Nitrokey/pc-usbip-runner", tag = "v0.0.1-nitrokey.5" }

# Local development
#trussed = { path = "../trussed" }
#trussed-rsa-alloc = { path = "../trussed-rsa-backend" }
